--- a/index.html
+++ b/index.html
@@ -211,22 +211,24 @@
                     <h4><span class="glyphicon glyphicon-envelope"></span> manjun.kim@uwaterloo.ca</h4> 
                     <br>
                 </div>
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-md-6 form-group">
-                            <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+                <form action="mail.php" method="POST">
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-md-6 form-group">
+                                <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+                            </div>
+                            <div class="col-md-6 form-group">
+                                <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+                            </div>
                         </div>
-                        <div class="col-md-6 form-group">
-                            <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
-                        </div>
+                        <textarea class="form-control" id="message" name="message" placeholder="Message" rows="5"></textarea><br>
+                        <div class="row">
+                            <div class="col-md-12 form-group">
+                                <button class="btn btn-dark pull-right" type="submit">Send</button>
+                            </div>
+                        </div> 
                     </div>
-                    <textarea class="form-control" id="comments" name="comments" placeholder="Message" rows="5"></textarea><br>
-                    <div class="row">
-                        <div class="col-md-12 form-group">
-                            <button class="btn btn-dark pull-right" type="submit">Send</button>
-                        </div>
-                    </div> 
-                </div>
+                </form>
                 <div class="col-md-1">
                 </div>
             </div>
