Changed some wording and updated resume

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                 <a href="#top"  onclick = $("#menu-close").click(); >Ryan Kim</a>
             </li>
             <li>
-                <a href="#about" onclick = $("#menu-close").click(); >About Me</a>
+                <a href="#about" onclick = $("#menu-close").click(); >Overview</a>
             </li>
             <li>
                 <a href="#projects" onclick = $("#menu-close").click(); >Projects</a>
             </li>
             <li>
-                <a href="#morecontent" onclick = $("#menu-close").click(); >My Life</a>
+                <a href="#morecontent" onclick = $("#menu-close").click(); >More About Me</a>
             </li>
             <li>
                 <a href="#resume" onclick = $("#menu-close").click(); >Resume</a>
@@ -143,19 +143,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h1>My Life</h1>
+                    <h1>More About Me</h1>
                     <hr>
                     <br>
                     <div class="row">
                         <div class="col-md-6">
                             <i class="fa fa-book fa-5x" aria-hidden="true"></i>
                             <h2>EDUCATION</h2>
-                            <h4>I attended one semester at the University of Calgary for a Bachelor of Science in Engineering but transfered to the University of Waterloo for a Bachelor of Computer Science to further pursue my interest in software development and programming.</h4>
+                            <h4>I attended one semester at the University of Calgary for a Bachelor of Science in Engineering but transferred to the University of Waterloo for a Bachelor of Computer Science to further pursue my interest in software development and programming.</h4>
                         </div>
                         <div class="col-md-6">
                             <i class="fa fa-code fa-5x" aria-hidden="true"></i>
                             <h2>PROGRAMMING</h2>
-                            <h4>I started programming when I was 13 with Adobe's ActionScript 3. Since then, I have learned several programming languages including Python, Java, etc. With these, I had fun working on some neat projects.</h4>
+                            <h4>I started programming when I was 13 with Adobe's ActionScript 3. Since then, I have learned several programming languages including Python, Java, Swift, C, Racket, etc. With these, I had fun working on some neat projects.</h4>
                         </div>
                     </div>
                     <br>
@@ -168,7 +168,7 @@
                         <div class="col-md-6">
                             <i class="fa fa-list fa-5x" aria-hidden="true"></i>
                             <h2>BUCKET LIST</h2>
-                            <h4>Some things I would like to do include  skydiving, backpacking through Europe, going on a vacation to Seychelles, and sitting first class on a plane :).</h4>
+                            <h4>Some things I would like to do include  skydiving, backpacking through Europe, going on a vacation to Seychelles, and sitting first class on a plane ☺.</h4>
                         </div>
                     </div>
                 </div>
@@ -292,7 +292,7 @@
     <script type="text/javascript">
         $(function () {
           $('.element').crossfade({
-            threshold: 0.4
+            threshold: 0.1
           });
           $('.element2').crossfade({
             start: 'img/projects.jpg',
