Updated projects page and resume

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <link href="css/hover.css" rel="stylesheet">
-
+    
     <link href="css/main.css" rel="stylesheet">
 
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -54,7 +54,7 @@
             <div class="headertext container">
 	            <div class="col-md-12">
 	                <h1>Ryan Kim</h1>
-	                <h2>Hi! I'm a <a href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a> student at the <a href="https://uwaterloo.ca">University of Waterloo.</a></h2>
+	                <h2>Hi! I'm a <a href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a> Major at the <a href="https://uwaterloo.ca">University of Waterloo.</a></h2>
 	                <a href="https://github.com/Ryanfsdf"><i class="hvr-icon-grow fa fa-github-square fa-3x" aria-hidden="true"></i></a>
 	                <a href="https://www.facebook.com/ryan.kim.146069"><i class="hvr-icon-grow fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
 	                <a href="https://ca.linkedin.com/in/ryanfsdf"><i class="hvr-icon-grow fa fa-linkedin-square fa-3x" aria-hidden="true">
@@ -72,13 +72,13 @@
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <h1>About Me</h1>
                     <hr>
-                    <h3>I'm a <a href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a> student at the <a href="https://uwaterloo.ca">University of Waterloo.</a><h3>
+                    <h3>I'm a <a href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a> Major at the <a href="https://uwaterloo.ca">University of Waterloo</a>.<h3>
                     <h3>My legal name is 
                     <span onclick="play()"><i class="fa fa-music"></i> Man-Jun</span> but my friends call me Ryan. Some people who see my name for the first time simply refer to me as "Man". My favourite programming language is <a href="https://www.python.org">Python</a>, and I love to work on <a href="#projects">projects</a> during my free time. Some other things I enjoy are snowboarding, listening to music, hanging out with friends, reading, learning about new things, taking photos, and watching movies. Although I have lived in Canada for most of my life, I am fluent in both English and Korean.</h3>
                 </div>
             </div>
         </div>
-    </section>
+    </section>  
 
     <aside class="showprojects">
         <div class="text-vertical-center element2">
@@ -96,30 +96,59 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h1>My Projects</h1>
                     <hr>
-                    <br>
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-sm-6">
                             <div class="portfolio-item hvr-float-shadow">
+                                <h2>
+                                    Java Replay
+                                </h2>
                                 <a href="https://github.com/Ryanfsdf/JavaReplay">
                                     <img class="img-portfolio img-responsive" src="img/JavaReplay.jpg">
                                 </a>
-                            </div>
-                            <div class="portfolio-item hvr-float-shadow">
-                                <a href="https://github.com/Ryanfsdf/JavRuler">
-                                    <img class="img-portfolio img-responsive" src="img/JavRuler.jpg">
-                                </a>
+                                <h4>
+                                    Mouse macro program written in Java using the jnativehook library for global event capturing
+                                </h4>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-sm-6">
                             <div class="portfolio-item hvr-float-shadow">
+                                <h2>
+                                    PymFile
+                                </h2>
                                 <a href="https://github.com/Ryanfsdf/PymFile">
                                     <img class="img-portfolio img-responsive" src="img/PymFile.jpg">
                                 </a>
+                                <h4>
+                                    Python program/script that analyzes, manipulates, and organizes large amounts of music files
+                                </h4>
                             </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">
                             <div class="portfolio-item hvr-float-shadow">
+                                <h2>
+                                    JavRuler
+                                </h2>
+                                <a href="https://github.com/Ryanfsdf/JavRuler">
+                                    <img class="img-portfolio img-responsive" src="img/JavRuler.jpg">
+                                </a>
+                                <h4>
+                                    Program written in Java that measures relatives distances between points on a screen
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="portfolio-item hvr-float-shadow">
+                                <h2>
+                                    Stephna Residence
+                                </h2>
                                 <a href="https://github.com/Ryanfsdf/StephNaResidence">
                                     <img class="img-portfolio img-responsive" src="img/StephNa.jpg">
                                 </a>
+                                <h4>
+                                    Company website idea made for StephNa Residence using Bootstrap 3
+                                </h4>
                             </div>
                         </div>
                     </div>
@@ -150,12 +179,12 @@
                         <div class="col-md-6">
                             <i class="fa fa-book fa-5x" aria-hidden="true"></i>
                             <h2>EDUCATION</h2>
-                            <h4>I attended one semester at the University of Calgary for a Bachelor of Science in Engineering but transferred to the University of Waterloo for a Bachelor of Computer Science to further pursue my interest in software development and programming.</h4>
+                            <h4>I attended one semester at the <a href="http://www.ucalgary.ca">University of Calgary</a> for a <a href="https://schulich.ucalgary.ca">Bachelor of Science in Engineering</a> but transferred to the <a href="https://uwaterloo.ca">University of Waterloo</a> for a Bachelor of <a href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a> to further pursue my interest in software development and programming.</h4>
                         </div>
                         <div class="col-md-6">
                             <i class="fa fa-code fa-5x" aria-hidden="true"></i>
                             <h2>PROGRAMMING</h2>
-                            <h4>I started programming when I was 13 with Adobe's ActionScript 3. Since then, I have learned several programming languages including Python, Java, Swift, C, Racket, etc. With these, I had fun working on some neat projects.</h4>
+                            <h4>I started programming when I was 13 with Adobe's <a href="http://www.adobe.com/devnet/actionscript/articles/actionscript3_overview.html">ActionScript 3</a>. Since then, I have learned several programming languages including <a href="https://www.python.org">Python</a>, <a href="https://www.java.com/en/">Java</a>, <a href="https://developer.apple.com/swift/">Swift</a>, <a href="https://en.wikipedia.org/wiki/C_(programming_language)">C</a>, <a href="https://racket-lang.org">Racket</a>, etc. With these, I had fun working on some neat <a href="#projects">projects</a>.</h4>
                         </div>
                     </div>
                     <br>
@@ -163,12 +192,12 @@
                         <div class="col-md-6">
                             <i class="fa fa-smile-o fa-5x" aria-hidden="true"></i>
                             <h2>WHAT I FIND FUN</h2>
-                            <h4>I enjoy working on my projects, snowboarding, listening to music, hanging out with friends, messing around with technology, playing ping pong, reading, taking photos, playing video games, watching movies, exploring my mind, and experiencing new things.</h4>
+                            <h4>I enjoy working on my <a href="#projects">projects</a>, snowboarding, listening to music, hanging out with friends, messing around with technology, playing ping pong, reading, taking photos, playing video games, watching movies, exploring my mind, and experiencing new things.</h4>
                         </div>
                         <div class="col-md-6">
                             <i class="fa fa-list fa-5x" aria-hidden="true"></i>
                             <h2>BUCKET LIST</h2>
-                            <h4>Some things I would like to do include  skydiving, backpacking through Europe, going on a vacation to Seychelles, and sitting first class on a plane ☺.</h4>
+                            <h4>Some things I would like to do include  skydiving, backpacking through Europe, going on a vacation to <a href="http://www.seychelles.travel">Seychelles</a>, and sitting first class on a plane ☺.</h4>
                         </div>
                     </div>
                 </div>
