Added other projects

--- a/index.html
+++ b/index.html
@@ -152,6 +152,60 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="portfolio-item hvr-float-shadow">
+                                <h2>
+                                    Terrible Alarm
+                                </h2>
+                                <a href="https://github.com/Ryanfsdf/TerribleAlarm">
+                                    <img class="img-portfolio img-responsive" src="img/terriblealarm.jpg">
+                                </a>
+                                <h4>
+                                    Alarm Clock made for Terrible Hacks Hackathon 2016
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="portfolio-item hvr-float-shadow">
+                                <h2>
+                                    Learn Math
+                                </h2>
+                                <a href="https://github.com/Ryanfsdf/LearnMath">
+                                    <img class="img-portfolio img-responsive" src="img/learnmath.jpg">
+                                </a>
+                                <h4>
+                                    App made for iOS to teach little kids how to do basic math operations
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="portfolio-item hvr-float-shadow">
+                                <h2>
+                                    Flash Game
+                                </h2>
+                                <a href="flashgame.html">
+                                    <img class="img-portfolio img-responsive" src="img/flashgame.jpg">
+                                </a>
+                                <h4>
+                                    A Flash game I made when I was 13. This was one of my first programming projects. It might not work on some browsers
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="portfolio-item">
+                                <h2>
+                                    Other Projects
+                                </h2>
+                                <br>
+                                <h4>
+                                    Some other non-programming related projects I have done include building a computer, self-installing radio/speakers onto my car, and flashing custom firmware on my phones.
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
                     <a href="https://github.com/Ryanfsdf" class="btn btn-dark">More on Github</a>
                 </div>
             </div>
