Fixed typos, wording; updated resume

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <hr>
                     <h3>I'm a <a href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a> Major at the <a href="https://uwaterloo.ca">University of Waterloo</a>.<h3>
                     <h3>My legal name is 
-                    <span onclick="play()"><i class="fa fa-music"></i> Man-Jun</span> but my friends call me Ryan. Some people who see my name for the first time simply refer to me as "Man". My favourite programming language is <a href="https://www.python.org">Python</a>, and I love to work on <a href="#projects">projects</a> during my free time. Some other things I enjoy are snowboarding, listening to music, hanging out with friends, reading, learning about new things, taking photos, and watching movies. Although I have lived in Canada for most of my life, I am fluent in both English and Korean.</h3>
+                    <span onclick="play()"><i class="fa fa-music"></i> Man-Jun</span> but my friends call me Ryan. Some people who see my name for the first time simply refer to me as "Man". My favourite programming language is <a href="https://www.python.org">Python</a>, and I love to work on <a href="#projects">projects</a> during my free time. Some other things I enjoy are snowboarding, listening to music, hanging out with friends, hiking, travelling, reading, learning about new things, taking photos, and watching movies. Although I have lived in Canada for most of my life, I am fluent in both English and Korean.</h3>
                 </div>
             </div>
         </div>
@@ -106,7 +106,7 @@
                                     <img class="img-portfolio img-responsive" src="img/JavaReplay.jpg">
                                 </a>
                                 <h4>
-                                    Mouse macro program written in Java using the jnativehook library for global event capturing
+                                    Mouse macro program written in Java using the jnativehook external library for global event capturing
                                 </h4>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                                     <img class="img-portfolio img-responsive" src="img/PymFile.jpg">
                                 </a>
                                 <h4>
-                                    Python program/script that analyzes, manipulates, and organizes large amounts of music files
+                                    Python program/script that analyzes, manipulates, and organizes large collections of music files
                                 </h4>
                             </div>
                         </div>
@@ -134,20 +134,20 @@
                                     <img class="img-portfolio img-responsive" src="img/JavRuler.jpg">
                                 </a>
                                 <h4>
-                                    Program written in Java that measures relatives distances between points on a screen
+                                    Program written in Java that measures relative distances between points on a screen
                                 </h4>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
-                                    Stephna Residence
+                                    StephNa Residence
                                 </h2>
                                 <a href="https://github.com/Ryanfsdf/StephNaResidence">
                                     <img class="img-portfolio img-responsive" src="img/StephNa.jpg">
                                 </a>
                                 <h4>
-                                    Company website idea made for StephNa Residence using Bootstrap 3
+                                    Responsive and informative business website idea made for StephNa Residence using Bootstrap 3
                                 </h4>
                             </div>
                         </div>
@@ -162,7 +162,7 @@
                                     <img class="img-portfolio img-responsive" src="img/terriblealarm.jpg">
                                 </a>
                                 <h4>
-                                    Alarm Clock made for Terrible Hacks Hackathon 2016
+                                    Alarm Clock made for Terrible Hacks Hackathon 2016 designed to force people to wake up at a desired time by manipulating system files
                                 </h4>
                             </div>
                         </div>
@@ -175,7 +175,7 @@
                                     <img class="img-portfolio img-responsive" src="img/learnmath.jpg">
                                 </a>
                                 <h4>
-                                    App made for iOS to teach little kids how to do basic math operations
+                                    App made for iOS to help little kids learn how to do basic math operations
                                 </h4>
                             </div>
                         </div>
@@ -190,7 +190,7 @@
                                     <img class="img-portfolio img-responsive" src="img/flashgame.jpg">
                                 </a>
                                 <h4>
-                                    A Flash game I made when I was 13. This was one of my first programming projects. It might not work on some browsers
+                                    A flash game I made when I was 13. This was one of my first programming projects. <a href="https://get.adobe.com/flashplayer/">Adobe Flash Player</a> is required to play
                                 </h4>
                             </div>
                         </div>
@@ -201,7 +201,7 @@
                                 </h2>
                                 <br>
                                 <h4>
-                                    Some other non-programming related projects I have done include building a computer, self-installing radio/speakers onto my car, and flashing custom firmware on my phones.
+                                    Some other non-programming related projects I have worked on include building a computer, self-installing radio/speakers onto my car, and flashing custom firmware on my phones.
                                 </h4>
                             </div>
                         </div>
@@ -246,7 +246,7 @@
                         <div class="col-md-6">
                             <i class="fa fa-smile-o fa-5x" aria-hidden="true"></i>
                             <h2>WHAT I FIND FUN</h2>
-                            <h4>I enjoy working on my <a href="#projects">projects</a>, snowboarding, listening to music, hanging out with friends, messing around with technology, playing ping pong, reading, taking photos, playing video games, watching movies, exploring my mind, and experiencing new things.</h4>
+                            <h4>I enjoy working on my <a href="#projects">projects</a>, snowboarding, listening to music, hanging out with friends, messing around with technology, playing ping pong, hiking, travelling, reading, taking photos, playing video games, watching movies, exploring my mind, and experiencing new things.</h4>
                         </div>
                         <div class="col-md-6">
                             <i class="fa fa-list fa-5x" aria-hidden="true"></i>
