--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <h1>My Projects</h1>
                     <hr>
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 slideanim">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
                                     Java Replay
@@ -110,7 +110,7 @@
                                 </h4>
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 slideanim">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
                                     PymFile
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 slideanim">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
                                     JavRuler
@@ -138,7 +138,7 @@
                                 </h4>
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 slideanim">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
                                     StephNa Residence
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 slideanim">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
                                     Terrible Alarm
@@ -166,7 +166,7 @@
                                 </h4>
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 slideanim">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
                                     Learn Math
@@ -181,7 +181,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 slideanim">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
                                     Flash Game
@@ -194,7 +194,7 @@
                                 </h4>
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 slideanim">
                             <div class="portfolio-item">
                                 <h2>
                                     Other Projects
@@ -230,12 +230,12 @@
                     <hr>
                     <br>
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6 slideanim">
                             <i class="fa fa-book fa-5x" aria-hidden="true"></i>
                             <h2>EDUCATION</h2>
                             <h4>I attended one semester at the <a href="http://www.ucalgary.ca">University of Calgary</a> for a <a href="https://schulich.ucalgary.ca">Bachelor of Science in Engineering</a> but transferred to the <a href="https://uwaterloo.ca">University of Waterloo</a> for a Bachelor of <a href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a> to further pursue my interest in software development and programming.</h4>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 slideanim">
                             <i class="fa fa-code fa-5x" aria-hidden="true"></i>
                             <h2>PROGRAMMING</h2>
                             <h4>I started programming when I was 13 with Adobe's <a href="http://www.adobe.com/devnet/actionscript/articles/actionscript3_overview.html">ActionScript 3</a>. Since then, I have learned several programming languages including <a href="https://www.python.org">Python</a>, <a href="https://www.java.com/en/">Java</a>, <a href="https://developer.apple.com/swift/">Swift</a>, <a href="https://en.wikipedia.org/wiki/C_(programming_language)">C</a>, <a href="https://racket-lang.org">Racket</a>, etc. With these, I had fun working on some neat <a href="#projects">projects</a>.</h4>
@@ -243,12 +243,12 @@
                     </div>
                     <br>
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6 slideanim">
                             <i class="fa fa-smile-o fa-5x" aria-hidden="true"></i>
                             <h2>WHAT I FIND FUN</h2>
                             <h4>I enjoy working on my <a href="#projects">projects</a>, snowboarding, listening to music, hanging out with friends, messing around with technology, playing ping pong, hiking, travelling, reading, taking photos, playing video games, watching movies, exploring my mind, and experiencing new things.</h4>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 slideanim">
                             <i class="fa fa-list fa-5x" aria-hidden="true"></i>
                             <h2>BUCKET LIST</h2>
                             <h4>Some things I would like to do include  skydiving, backpacking through Europe, going on a vacation to <a href="http://www.seychelles.travel">Seychelles</a>, and sitting first class on a plane ☺.</h4>
@@ -357,7 +357,7 @@
                 if (target.length) {
                     $('html,body').animate({
                         scrollTop: target.offset().top
-                    }, 2500);
+                    }, 1500);
                     return false;
                 }
             }
@@ -380,13 +380,13 @@
           $('.element2').crossfade({
             start: 'img/projects.jpg',
             end: 'img/projects2.jpg',
-            threshold: 0.35,
+            threshold: 0.45,
             backgroundPosition: 'center center'
           });
           $('.element3').crossfade({
             start: 'img/moreaboutme.jpg',
             end: 'img/moreaboutme2.jpg',
-            threshold: 0.35,
+            threshold: 0.45,
             backgroundPosition: 'center center'
           });
         });
@@ -401,6 +401,19 @@
       ga('create', 'UA-77336355-1', 'auto');
       ga('send', 'pageview');
 
+    </script>
+
+    <script>
+        $(window).scroll(function() {
+          $(".slideanim").each(function(){
+            var pos = $(this).offset().top;
+
+            var winTop = $(window).scrollTop();
+            if (pos < winTop + 600) {
+              $(this).addClass("slides");
+            }
+          });
+        });
     </script>
 
     <audio id="audio" src="ManJun.mp3"></audio>
