Added side transitions and updated resume

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section id="about" class="about">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 col-md-offset-2 text-center">
+                <div class="col-md-10 col-md-offset-1 text-center">
                     <h1>About Me</h1>
                     <hr>
                     <h3>I'm a <a href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a> Major at the <a href="https://uwaterloo.ca">University of Waterloo</a>.<h3>
@@ -93,11 +93,11 @@
     <section id="projects" class="projects bg-primary">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
+                <div class="col-lg-12 text-center">
                     <h1>My Projects</h1>
                     <hr>
                     <div class="row">
-                        <div class="col-sm-6 slideanim">
+                        <div class="col-sm-4 slideanimleft">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
                                     Java Replay
@@ -110,7 +110,7 @@
                                 </h4>
                             </div>
                         </div>
-                        <div class="col-sm-6 slideanim">
+                        <div class="col-sm-4 slideanim">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
                                     PymFile
@@ -123,9 +123,7 @@
                                 </h4>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6 slideanim">
+                        <div class="col-sm-4 slideanimright">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
                                     JavRuler
@@ -138,7 +136,9 @@
                                 </h4>
                             </div>
                         </div>
-                        <div class="col-sm-6 slideanim">
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4 slideanimleft">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
                                     StephNa Residence
@@ -151,9 +151,7 @@
                                 </h4>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6 slideanim">
+                        <div class="col-sm-4 slideanim">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
                                     Terrible Alarm
@@ -166,7 +164,7 @@
                                 </h4>
                             </div>
                         </div>
-                        <div class="col-sm-6 slideanim">
+                        <div class="col-sm-4 slideanimright">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
                                     Learn Math
@@ -181,7 +179,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-6 slideanim">
+                        <div class="col-sm-4 slideanimleft">
                             <div class="portfolio-item hvr-float-shadow">
                                 <h2>
                                     Flash Game
@@ -194,7 +192,7 @@
                                 </h4>
                             </div>
                         </div>
-                        <div class="col-sm-6 slideanim">
+                        <div class="col-sm-4 slideanim">
                             <div class="portfolio-item">
                                 <h2>
                                     Other Projects
@@ -225,17 +223,17 @@
     <section id="morecontent" class="morecontent">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
+                <div class="col-lg-12 text-center">
                     <h1>More About Me</h1>
                     <hr>
                     <br>
                     <div class="row">
-                        <div class="col-md-6 slideanim">
+                        <div class="col-md-6 slideanim portfolio-item">
                             <i class="fa fa-book fa-5x" aria-hidden="true"></i>
                             <h2>EDUCATION</h2>
                             <h4>I attended one semester at the <a href="http://www.ucalgary.ca">University of Calgary</a> for a <a href="https://schulich.ucalgary.ca">Bachelor of Science in Engineering</a> but transferred to the <a href="https://uwaterloo.ca">University of Waterloo</a> for a Bachelor of <a href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a> to further pursue my interest in software development and programming.</h4>
                         </div>
-                        <div class="col-md-6 slideanim">
+                        <div class="col-md-6 slideanim portfolio-item">
                             <i class="fa fa-code fa-5x" aria-hidden="true"></i>
                             <h2>PROGRAMMING</h2>
                             <h4>I started programming when I was 13 with Adobe's <a href="http://www.adobe.com/devnet/actionscript/articles/actionscript3_overview.html">ActionScript 3</a>. Since then, I have learned several programming languages including <a href="https://www.python.org">Python</a>, <a href="https://www.java.com/en/">Java</a>, <a href="https://developer.apple.com/swift/">Swift</a>, <a href="https://en.wikipedia.org/wiki/C_(programming_language)">C</a>, <a href="https://racket-lang.org">Racket</a>, etc. With these, I had fun working on some neat <a href="#projects">projects</a>.</h4>
@@ -243,12 +241,12 @@
                     </div>
                     <br>
                     <div class="row">
-                        <div class="col-md-6 slideanim">
+                        <div class="col-md-6 slideanim portfolio-item">
                             <i class="fa fa-smile-o fa-5x" aria-hidden="true"></i>
                             <h2>WHAT I FIND FUN</h2>
                             <h4>I enjoy working on my <a href="#projects">projects</a>, snowboarding, listening to music, hanging out with friends, messing around with technology, playing ping pong, hiking, travelling, reading, taking photos, playing video games, watching movies, exploring my mind, and experiencing new things.</h4>
                         </div>
-                        <div class="col-md-6 slideanim">
+                        <div class="col-md-6 slideanim portfolio-item">
                             <i class="fa fa-list fa-5x" aria-hidden="true"></i>
                             <h2>BUCKET LIST</h2>
                             <h4>Some things I would like to do include  skydiving, backpacking through Europe, going on a vacation to <a href="http://www.seychelles.travel">Seychelles</a>, and sitting first class on a plane ☺.</h4>
@@ -405,11 +403,33 @@
 
     <script>
         $(window).scroll(function() {
+          $(".slideanimleft").each(function(){
+            var pos = $(this).offset().top;
+
+            var winTop = $(window).scrollTop();
+            if (pos < winTop + 550) {
+              $(this).addClass("slidesleft");
+            }
+          });
+        });
+    
+        $(window).scroll(function() {
+          $(".slideanimright").each(function(){
+            var pos = $(this).offset().top;
+
+            var winTop = $(window).scrollTop();
+            if (pos < winTop + 550) {
+              $(this).addClass("slidesright");
+            }
+          });
+        });
+
+        $(window).scroll(function() {
           $(".slideanim").each(function(){
             var pos = $(this).offset().top;
 
             var winTop = $(window).scrollTop();
-            if (pos < winTop + 600) {
+            if (pos < winTop + 550) {
               $(this).addClass("slides");
             }
           });
