--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
     </section>  
 
-    <aside class="showprojects">
+    <aside id="projects" class="showprojects">
         <div class="text-vertical-center element2">
         	<div class="container">
         		<div class="col-md-12">
@@ -90,12 +90,10 @@
         </div>
     </aside>
 
-    <section id="projects" class="projects bg-primary">
+    <section class="projects bg-primary">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1>My Projects</h1>
-                    <hr>
                     <div class="row">
                         <div class="col-sm-4 slideanimleft">
                             <div class="portfolio-item hvr-float-shadow">
@@ -210,7 +208,7 @@
         </div>
     </section>
 
-    <aside class="moreaboutme">
+    <aside id="morecontent" class="moreaboutme">
         <div class="text-vertical-center element3">
         	<div class="container">
         		<div class="col-md-12">
@@ -220,14 +218,12 @@
         </div>
     </aside>
 
-    <section id="morecontent" class="morecontent">
+    <section class="morecontent">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1>More About Me</h1>
-                    <hr>
-                    <br>
                     <div class="row">
+                        <br>
                         <div class="col-md-6 slideanim portfolio-item">
                             <i class="fa fa-book fa-5x" aria-hidden="true"></i>
                             <h2>EDUCATION</h2>
@@ -373,18 +369,18 @@
     <script type="text/javascript">
         $(function () {
           $('.element').crossfade({
-            threshold: 0.1
+            threshold: 0.15
           });
           $('.element2').crossfade({
             start: 'img/projects.jpg',
             end: 'img/projects2.jpg',
-            threshold: 0.45,
+            threshold: 0.25,
             backgroundPosition: 'center center'
           });
           $('.element3').crossfade({
             start: 'img/moreaboutme.jpg',
             end: 'img/moreaboutme2.jpg',
-            threshold: 0.45,
+            threshold: 0.25,
             backgroundPosition: 'center center'
           });
         });
