--- a/index.html
+++ b/index.html
@@ -52,15 +52,22 @@
     <header id="top" class="header">
         <div class="text-vertical-center element" data-crossfade-start="img/bg.jpg" data-crossfade-end="img/bg2.jpg">
             <div class="headertext container">
-	            <div class="col-md-12">
-	                <h1>Ryan Kim</h1>
-	                <h2>Hi! I'm a <a href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a> Major at the <a href="https://uwaterloo.ca">University of Waterloo.</a></h2>
-	                <a href="https://github.com/Ryanfsdf"><i class="hvr-icon-grow fa fa-github-square fa-3x" aria-hidden="true"></i></a>
-	                <a href="https://www.facebook.com/ryan.kim.146069"><i class="hvr-icon-grow fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
-	                <a href="https://ca.linkedin.com/in/ryanfsdf"><i class="hvr-icon-grow fa fa-linkedin-square fa-3x" aria-hidden="true">
-	                </i></a>
-	                <br><br><br><br>
-	                <a href="#about" class="btn btn-dark btn-lg hvr-grow-shadow">Check out some of my work!</a>
+            	<div class="row">
+		            <div class="col-md-12">
+		            	<br><br><br><br><br><br>
+		                <h1>Ryan <span style="font-weight: 400;">Kim</span></h1>
+		                <h2>Hi! I'm a <a href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a> Major at the <a href="https://uwaterloo.ca">University of Waterloo.</a></h2>
+		                <a href="https://github.com/Ryanfsdf"><i class="hvr-icon-grow fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+		                <a href="https://www.facebook.com/ryan.kim.146069"><i class="hvr-icon-grow fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
+		                <a href="https://ca.linkedin.com/in/ryanfsdf"><i class="hvr-icon-grow fa fa-linkedin-square fa-3x" aria-hidden="true">
+		                </i></a>
+		                <br><br><br><br><br><br><br>
+	                </div>
+                </div>
+                <div class="row">
+                	<div class="col-md-12">
+                		<a href="#about"><i class="fa fa-chevron-down fa-3x hvr-sink"></i></a>
+                	</div>
                 </div>
             </div>
         </div>
@@ -72,7 +79,7 @@
                 <div class="col-md-10 col-md-offset-1 text-center">
                     <h1>About Me</h1>
                     <hr>
-                    <h3>I'm a <a href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a> Major at the <a href="https://uwaterloo.ca">University of Waterloo</a>.<h3>
+                    <h3>I'm a student at the <a href="https://uwaterloo.ca">University of Waterloo</a> with a desire to leave a legacy in the world.<h3>
                     <h3>My legal name is 
                     <span onclick="play()"><i class="fa fa-music"></i> Man-Jun</span> but my friends call me Ryan. Some people who see my name for the first time simply refer to me as "Man". My favourite programming language is <a href="https://www.python.org">Python</a>, and I love to work on <a href="#projects">projects</a> during my free time. Some other things I enjoy are snowboarding, listening to music, hanging out with friends, hiking, travelling, reading, learning about new things, taking photos, and watching movies. Although I have lived in Canada for most of my life, I am fluent in both English and Korean.</h3>
                 </div>
@@ -90,7 +97,7 @@
         </div>
     </aside>
 
-    <section class="projects bg-primary">
+    <section class="projects">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -202,7 +209,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="https://github.com/Ryanfsdf" class="btn btn-dark">More on Github</a>
+                    <a href="https://github.com/Ryanfsdf" class="btn btn-dark btn-lg hvr-grow-shadow">More on Github</a>
                 </div>
             </div>
         </div>
@@ -227,7 +234,7 @@
                         <div class="col-md-6 slideanim portfolio-item">
                             <i class="fa fa-book fa-5x" aria-hidden="true"></i>
                             <h2>EDUCATION</h2>
-                            <h4>I attended one semester at the <a href="http://www.ucalgary.ca">University of Calgary</a> for a <a href="https://schulich.ucalgary.ca">Bachelor of Science in Engineering</a> but transferred to the <a href="https://uwaterloo.ca">University of Waterloo</a> for a Bachelor of <a href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a> to further pursue my interest in software development and programming.</h4>
+                            <h4>I attended one semester at the <a href="http://www.ucalgary.ca">University of Calgary</a> for a <a href="https://schulich.ucalgary.ca">Bachelor of Science in Engineering</a> but transferred to the <a href="https://uwaterloo.ca">University of Waterloo</a> for a <a href="https://cs.uwaterloo.ca">Bachelor of Computer Science</a> to further pursue my interest in software development and programming.</h4>
                         </div>
                         <div class="col-md-6 slideanim portfolio-item">
                             <i class="fa fa-code fa-5x" aria-hidden="true"></i>
@@ -262,7 +269,7 @@
                 	<br>
                     <h3>Click below to see a PDF of my resume</h3>
                     <br>
-                    <a href="RyanKimResume.pdf" class="btn btn-lg btn-dark">My Current Resume</a>
+                    <a href="RyanKimResume.pdf" class="btn btn-lg btn-dark hvr-grow-shadow">My Current Resume</a>
                 </div>
             </div>
         </div>
