Image and left nav

--- a/index.html
+++ b/index.html
@@ -79,7 +79,12 @@
                 <div class="col-md-10 col-md-offset-1 text-center">
                     <h1>About Me</h1>
                     <hr>
-                    <h3>I'm a student at the <a href="https://uwaterloo.ca">University of Waterloo</a> with a desire to leave a legacy in the world.<h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-10 col-md-offset-1 myimg text-justify">
+                    <p class="imgphoto"><img src="img/ryankimphoto.jpg"></p>
+                	<h3>I'm a student at the <a href="https://uwaterloo.ca">University of Waterloo</a> with a desire to leave a legacy in the world.<h3>
                     <h3>My legal name is 
                     <span onclick="play()"><i class="fa fa-music"></i> Man-Jun</span> but my friends call me Ryan. Some people who see my name for the first time simply refer to me as "Man". My favourite programming language is <a href="https://www.python.org">Python</a>, and I love to work on <a href="#projects">projects</a> during my free time. Some other things I enjoy are snowboarding, listening to music, hanging out with friends, hiking, travelling, reading, learning about new things, taking photos, and watching movies. Although I have lived in Canada for most of my life, I am fluent in both English and Korean.</h3>
                 </div>
@@ -234,12 +239,12 @@
                         <div class="col-md-6 slideanim portfolio-item">
                             <i class="fa fa-book fa-5x" aria-hidden="true"></i>
                             <h2>EDUCATION</h2>
-                            <h4>I attended one semester at the <a href="http://www.ucalgary.ca">University of Calgary</a> for a <a href="https://schulich.ucalgary.ca">Bachelor of Science in Engineering</a> but transferred to the <a href="https://uwaterloo.ca">University of Waterloo</a> for a <a href="https://cs.uwaterloo.ca">Bachelor of Computer Science</a> to further pursue my interest in software development and programming.</h4>
+                            <h4 align="justify">I attended one semester at the <a href="http://www.ucalgary.ca">University of Calgary</a> for a <a href="https://schulich.ucalgary.ca">Bachelor of Science in Engineering</a> but transferred to the <a href="https://uwaterloo.ca">University of Waterloo</a> for a <a href="https://cs.uwaterloo.ca">Bachelor of Computer Science</a> to further pursue my interest in software development and programming.</h4>
                         </div>
                         <div class="col-md-6 slideanim portfolio-item">
                             <i class="fa fa-code fa-5x" aria-hidden="true"></i>
                             <h2>PROGRAMMING</h2>
-                            <h4>I started programming when I was 13 with Adobe's <a href="http://www.adobe.com/devnet/actionscript/articles/actionscript3_overview.html">ActionScript 3</a>. Since then, I have learned several programming languages including <a href="https://www.python.org">Python</a>, <a href="https://www.java.com/en/">Java</a>, <a href="https://developer.apple.com/swift/">Swift</a>, <a href="https://en.wikipedia.org/wiki/C_(programming_language)">C</a>, <a href="https://racket-lang.org">Racket</a>, etc. With these, I had fun working on some neat <a href="#projects">projects</a>.</h4>
+                            <h4 align="justify">I started programming when I was 13 with Adobe's <a href="http://www.adobe.com/devnet/actionscript/articles/actionscript3_overview.html">ActionScript 3</a>. Since then, I have learned several programming languages including <a href="https://www.python.org">Python</a>, <a href="https://www.java.com/en/">Java</a>, <a href="https://developer.apple.com/swift/">Swift</a>, <a href="https://en.wikipedia.org/wiki/C_(programming_language)">C</a>, <a href="https://racket-lang.org">Racket</a>, etc. Using these, I had fun working on some neat <a href="#projects">projects</a>.</h4>
                         </div>
                     </div>
                     <br>
@@ -247,12 +252,12 @@
                         <div class="col-md-6 slideanim portfolio-item">
                             <i class="fa fa-smile-o fa-5x" aria-hidden="true"></i>
                             <h2>WHAT I FIND FUN</h2>
-                            <h4>I enjoy working on my <a href="#projects">projects</a>, snowboarding, listening to music, hanging out with friends, messing around with technology, playing ping pong, hiking, travelling, reading, taking photos, playing video games, watching movies, exploring my mind, and experiencing new things.</h4>
+                            <h4 align="justify">I enjoy working on my <a href="#projects">projects</a>, snowboarding, listening to music, hanging out with friends, messing around with technology, playing ping pong, hiking, travelling, reading, taking photos, playing video games, watching movies, exploring my mind, and experiencing new things.</h4>
                         </div>
                         <div class="col-md-6 slideanim portfolio-item">
                             <i class="fa fa-list fa-5x" aria-hidden="true"></i>
                             <h2>BUCKET LIST</h2>
-                            <h4>Some things I would like to do include  skydiving, backpacking through Europe, going on a vacation to <a href="http://www.seychelles.travel">Seychelles</a>, and sitting first class on a plane ☺.</h4>
+                            <h4 align="justify">Some things I would like to do include  skydiving, backpacking through Europe, going on a vacation to <a href="http://www.seychelles.travel">Seychelles</a>, and sitting first class on a plane ☺.</h4>
                         </div>
                     </div>
                 </div>
